# Portfolio-Website

./: .gitignore  README.md
.github/workflows/: ci.yml
apps/admin/: README.md
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: b20f13afa726_initial_schema.py
apps/api/src/app/: main.py  models_registry.py  seed.py
apps/api/src/app/core/: base.py  config.py  db.py  errors.py  logging.py
apps/api/src/app/modules/audit/: models.py
apps/api/src/app/modules/auth/: models.py
apps/api/src/app/modules/contact/: models.py
apps/api/src/app/modules/content/: models.py  router.py  schemas.py  service.py
apps/api/src/app/modules/health/: router.py
apps/api/tests/: conftest.py  test_content.py  test_health.py
apps/web/: .env.example  next.config.ts  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
apps/web/src/app/colophon/: page.tsx
apps/web/src/app/work/[slug]/: page.tsx
apps/web/src/components/: footer.tsx  markdown.tsx  nav.tsx  project-card.tsx  section.tsx  trace.tsx
apps/web/src/content/: experience.ts  projects.ts  site.ts  skills.ts
apps/web/src/lib/: content.ts  fonts.sandbox.ts  fonts.ts  types.ts
docs/: portfolio-architecture.md
infra/: docker-compose.yml
